# mrangeui

./: AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
res/1080_Template/Background_Full.pxd/: metadata.info
res/1080_Template/Background_Full.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
src/: Clock.cpp  Clock.h  Exception.h  Locale.cpp  Locale.h  Logger.cpp  Main.cpp  UI.cpp  UI.h
src/UIComponent/: Background.cpp  Background.h  TodayInfo.cpp  TodayInfo.h  UIComponent.h
